log/build_2025-09-17_15-03-44/low_level/stderr.log
  File "/home/bagus/ichimonji/odometry/install/low_level/lib/python3.10/site-packages/low_level/learn_mavros.py", line 11
    msg_type=Altitude,,
                      ^
SyntaxError: invalid syntax

